# Telemetry

./: CMakeLists.txt  Dockerfile  build.sh  configPaths.h  cpuState.cpp  cpuState.h  main.cpp  memoryState.cpp  memoryState.h  processState.cpp  processState.h  run.sh  stop.sh  thermalState.cpp  thermalState.h
